--- a/config/scenario/philosopher.yaml
+++ b/config/scenario/philosopher.yaml
@@ -25,7 +25,7 @@ steps:
         target: current
         exclude_types: [ner, step]
       - action: query
-        document_types: [pondering, brainstorm, daydream]
+        document_types: [pondering, brainstorm, daydream, understanding]
         top_n: 10
       - action: sort
         by: timestamp
